# pythlings

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
exercises/00_intro/: intro3.py  intro4.py  intro7.py
exercises/01_variables/: variables1.py  variables2.py  variables4.py  variables5.py  variables6.py  variables7.py
exercises/02_functions/: functions2.py  functions4.py
exercises/03_if/: if1.py  if3.py  if4.py  if7.py
exercises/04_loops/: loops1.py  loops2.py  loops7.py
exercises/05_strings/: strings2.py  strings4.py  strings5.py
exercises/06_lists/: lists2.py  lists5.py  lists7.py
exercises/07_dictionaries/: dictionaries1.py  dictionaries2.py  dictionaries3.py  dictionaries4.py  dictionaries5.py  dictionaries7.py
exercises/08_tuples/: tuples2.py  tuples3.py  tuples4.py
exercises/09_modules/: modules2.py
exercises/10_exceptions/: exceptions1.py  exceptions5.py
exercises/11_files/: files1.py  files2.py  files6.py
exercises/12_classes/: classes3.py  classes5.py
exercises/13_comprehensions/: comprehensions2.py  comprehensions3.py  comprehensions4.py  comprehensions5.py
exercises/14_iterators/: iterators2.py  iterators6.py  iterators7.py
exercises/15_decorators/: decorators4.py  decorators5.py
exercises/16_dataclasses/: dataclasses2.py  dataclasses3.py  dataclasses4.py  dataclasses6.py  dataclasses7.py
exercises/17_typing/: typing1.py  typing3.py  typing4.py
exercises/18_testing/: testing2.py  testing3.py  testing5.py  testing7.py
exercises/19_asyncio/: asyncio1.py  asyncio2.py  asyncio4.py  asyncio5.py
exercises/20_architecture/: architecture1.py  architecture4.py
pythlings/: __init__.py  cli.py  validation.py
solutions/00_intro/: intro2.py  intro3.py  intro4.py  intro5.py  (+2 more)
(+253 files in other folders)
