[project]
name = "pythlings"
version = "1.0.0"
description = "A Rustlings-style Python learning CLI"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "loguru>=0.7.3",
]

[project.scripts]
pythlings = "pythlings.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
